fix: ready to opensource

--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ FFPROBE_PATH=
 # Python path (leave blank to auto-detect venv)
 PYTHON_PATH=
 
-# Working directory (defaults to ~/.podcli)
+# Working directory (defaults to .podcli/ in project root)
 PODCLI_HOME=
 
 # Logging
